<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bankomat Card Infos</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="action_donate">Donation</string>
    <string name="action_changelog">Changelog</string>
    <string name="your_card_please">Please hold your card close to the back side of your device&#8230;</string>
    <string name="nfc_logo_description">NFC Logo</string>
    <string name="read_card_progress_status">Reading card&#8230;</string>

    <!-- error alert dialogs -->
    <string name="dialog_title_error_no_maestro_or_quick">Unknown Card</string>
    <string name="dialog_text_error_no_maestro_or_quick">This card is no Maestro or Paylife QUICK card.</string>
    <string name="dialog_title_error_card_lost">Card lost</string>
    <string name="dialog_text_error_card_lost">Lost the connection to the card during reading.\n\nDid you remove the card?</string>
    <string name="dialog_title_error_no_smartcard">No SmartCard</string>
    <string name="dialog_text_error_no_smartcard">This NFC tag is no valid ISO 7816 compliant SmartCard.</string>
    <string name="dialog_title_error_ioexception">IO Exception</string>
    <string name="dialog_text_error_ioexception">IOException during reading the card. You probably won\'t see any results.\n\nLook in the \'Log\' tab for details what may have gone wrong.</string>
    <string name="dialog_title_error_unknown">Unknown Exception</string>
    <string name="dialog_text_error_unknown">Unknown error during reading the card. Look into logcat for details.</string>

    <!-- No NFC available.. -->
    <string name="title_activity_nfc_disabled">NFC not available</string>
    <string name="nfc_not_available">NFC not available on this device or disabled in Android system settings.</string>

    <!-- Result activity -->
    <string name="title_activity_result">Results</string>
    <string name="title_section1">Infos</string>
    <string name="title_section2">Transactions</string>
    <string name="title_section3">Log</string>

    <!-- General results -->

	<!-- section headers -->
	<string name="section_nfc">NFC:</string>
	<string name="section_GPCS_CPLC">Card infos (CPLC data):</string>
	<string name="section_emv">EMV / Maestro / Quick:</string>

	<string name="lbl_nfc_tag_id">NFC tag ID of the card\n(This is NOT the card or account number!):</string>
    <string name="lbl_is_quick_card">Is a QUICK card:</string>
    <string name="lbl_is_maestro_card">Is a Maestro (Bankomat) card:</string>
    <string name="lbl_is_visa_card">Is a VISA Creditcard:</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="lbl_quick_balance">QUICK balance:</string>
    <string name="lbl_quick_currency">QUICK currency:</string>
    <string name="lbl_remaining_pin_retries">Remaining PIN entry retries:</string>
    <string name="lbl_expiration_date">Expiration date:</string>
    <string name="lbl_effective_date">Activation date:</string>
    <string name="lbl_primary_account_number">Card number:</string>
    <string name="lbl_application_transaction_counter">Transaction counter:</string>
    <!-- did we find the EMV TAG "9F 4D" ("Log Entry")?  -->
    <string name="lbl_contains_emv_log_entry_tag">Contains info about transaction logs:</string>
    

    <!-- Transaction List: -->
    <string name="tx_list_no_tx_found">No transactions found</string>
    <string name="tx_list_no_tx_log_tag_found">This card seems not to contain any transactions logs.</string>
    <!-- alert dialog -->
    <string name="tx_log_alertdialog_title">Note</string>
    <string name="tx_log_alertdialog_text">Sorry.. This card seems not contain transaction logs at all. \n\nDetails: the EMV TAG \"9F 4D\" (\"Log Entry\") is not present on this card.</string>
    
    <!-- Transaction List Item: -->
    <string name="tx_list_image_description_collapse_icon">Icon Collapse</string>
    <string name="tx_list_image_description_expand_icon">Icon Expand</string>
    <string name="tx_list_cryptogram_info_label">Cryptogram Information Data:</string>
    <string name="tx_list_atc_label">ATC (application tx counter):</string>
    <string name="tx_list_customer_exclusive_data_label">Customer Exclusive Data:</string>
    <string name="tx_list_application_default_action_label">Application Default Action (ADA)??:</string>
    <string name="tx_list_unknown_byte_label">Unknown??:</string>

    <!-- Share Subject -->
    <string name="action_share_subject">Bankomat Card Info - Results</string>

    <!-- About Dialog -->
    <string name="about_dialog_btnOk">OK</string>
    <string name="about_dialog_title">About</string>
    <string name="about_dialog_image_description">App logo</string>

    <!-- Donate Dialog -->
    <string name="donate_dialog_title">Donations</string>
    <string name="donate_dialog_btn_bitcoin">Bitcoin</string>
    <string name="donate_dialog_btn_flattr">Flattr</string>
    <string name="donate_dialog_btn_paypal">Paypal</string>
    <string name="donate_dialog_btn_euro">Euro (bank account)</string>
    <string name="donate_text"><Data><![CDATA[ <b>First of all:</b><br/><br/>It\'s completely okay to use this app for free. I\'ve built this app just out of technical interest and not with the intent to make profit.<br/><br/>For those who want to donate, you can do it the following ways: ]]> </Data></string>

    <!-- Changelog dialog -->
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more&#8230;</string>

    <!-- Settings activity -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_system_nfc_settings">Android NFC system settings</string>
    <string name="pref_title_perform_full_file_scan">Scan all files</string>
    <string name="pref_description_perform_full_file_scan_true">Scan all files. This will take longer but *may* find more data.</string>
    <string name="pref_description_perform_full_file_scan_false">Just scan well-known files. Scanning will be much faster.</string>

    <!-- Cryptogram information data -->
    <string name="cryptogram_type_tc">The terminal is allowed accept this transaction offline (but it still may go online for other reasons).</string>
    <string name="cryptogram_type_arqc">The terminal must go online and ask the bank if this transaction should be accepted.</string>
    <string name="cryptogram_type_aac">The card immediately declined this transaction offline.</string>
    <string name="cryptogram_type_rfu">This type is reserved for future use.</string>
    
    <!-- Important Update Notice -->
    <string name="upgrade_notice_title">Upgrade notice</string>
    <string name="upgrade_notice_text">IMPORTANT UPGRADE NOTE!\n\nBecause Google blocked this application ID in their Play Store (because of the Paypal donation button) and offers no way to activate it again I reluctantly decided to publish this application (now without a donation dialog) under a new name and application ID.\n\nPlease uninstall this version of the application and install the new application, which is now called:\n\n\n\"Bankomat Card Infos 2\"\n\n\nIt\'s the same application, still free, still open-source, just under a new name and can also be found in the F-Droid repository. I am really sorry for this inconvenience.\n\nThanks for your understanding and your support,\n\nJohannes Zweng\n\n\nP.S.: As a small compensation: the new version now also supports reading of VISA and Mastercard credit cards. :-)</string>
</resources>