<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/creditDialog_layout_root"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:contentDescription="@string/about_dialog_image_description"
                    android:gravity="bottom"
                    android:src="@drawable/ic_launcher" />
            </LinearLayout>

            <TextView
                android:id="@+id/donate_dialog_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web|email"
                android:text=""
                android:textColor="#FFFFFF" />
        </LinearLayout>
        <Button
            android:id="@+id/btnDonateDialogBitcoin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/donate_dialog_btn_bitcoin" >
        </Button>
        <Button
            android:id="@+id/btnDonateDialogFlattr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/donate_dialog_btn_flattr" >
        </Button>
        <Button
            android:id="@+id/btnDonateDialogPaypal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/donate_dialog_btn_paypal" >
        </Button>
        
        <Button
            android:id="@+id/btnDonateDialogEuros"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/donate_dialog_btn_euro" >
        </Button>
    </LinearLayout>

</ScrollView>