<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <!-- Show progress -->
<!-- TODO FIXME TEXT Abgeschnitten unten BUG -->
    <LinearLayout
        android:id="@+id/read_card_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />
        <TextView
            android:id="@+id/read_card_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/read_card_progress_status"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewNfcLogo"
        android:layout_width="260dp"
        android:layout_height="182dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/nfc_logo_description"
        android:src="@drawable/nfc_icon" />

    <TextView
        android:id="@+id/textViewYourCardPlease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewNfcLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:gravity="center_horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/your_card_please"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>